# naval-conquest

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
assets/: assets.hpp  assets_converter.py
assets/shaders/: fBasic.glsl  fSimpleUnlit.glsl  fWater.glsl  v2D.glsl  vBasic.glsl  vSimple.glsl  vWater.glsl
include/: assets.hpp  glfwController.hpp  meshManagement.h  objectManagement.h  renderEngine.h  shader.h
include/engine/: camera.hpp  constants.hpp  fileLoader.hpp  lightManagement.hpp  meshManagement.h  meshManagement.hpp  meshManager.hpp  object.hpp  objectManagement.h  objectManagement.hpp  renderEngine.h  renderEngine.hpp  sceneLighting.hpp  shader.h  shader.hpp  shaderManagement.h  shaderManagement.hpp  shaderManager.hpp
include/game/: action.hpp  game.hpp  gameController.h  gameController.hpp  gameObject.hpp  gridObject.hpp  random.hpp  uiManager.hpp  uiPreset.hpp  unit.hpp  unitObject.hpp
lib/glText-master/: gltext.h
lib/glad/: glad.c  glad.h
snap/: snapcraft.yaml
snap/gui/: naval-conquest.desktop
src/: glfwController.cpp  main.cpp  meshManagement.cpp  objectManagement.cpp  renderEngine.cpp
src/engine/: camera.cpp  fileLoader.cpp  lightManagement.cpp  meshManagement.cpp  meshManager.cpp  object.cpp  objectManagement.cpp  renderEngine.cpp  sceneLighting.cpp  shader.cpp  shaderManagement.cpp  shaderManager.cpp
src/game/: action.cpp  game.cpp  gameController.cpp  gameObject.cpp  gridObject.cpp  random.cpp  uiManager.cpp  uiPreset.cpp  unit.cpp  unitObject.cpp
tools/: assets_converter.py  objLoader.cpp  templates_instantiations.py
